- fix cover in new draft being collapsed - add some padding at the end of editor

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,7 +12,7 @@
 
 .editableClass {
   .ProseMirror {
-    @apply z-0 pl-5
+    @apply z-0 pl-5 pb-5
   }
 }
 
